--- a/SimpleLogin/app/src/main/res/layout/activity_login.xml
+++ b/SimpleLogin/app/src/main/res/layout/activity_login.xml
@@ -39,7 +39,7 @@
                         tools:ignore="ContentDescription" />
 
                     <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/emailTextField"
+                        android:id="@+id/emailLoginTextField"
                         style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -47,6 +47,7 @@
                         tools:ignore="HardcodedText">
 
                         <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/emailEditTextField"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:drawableEnd="@drawable/ic_close_fill_21dp"
@@ -67,6 +68,7 @@
                         tools:ignore="HardcodedText">
 
                         <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/passwordEditTextField"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="textPassword"
